compiler/weave_syntax/tests/data/syntax/statements/invalid-loop.error
error: Unexpected tokens
        --> <source>:3:5
         |
       3 |     :z= a b c 4
         |     ^^^^^^^^^^^
       4 |     r = 2 + z
         | ^^^^^^^^^^^^^
