compiler/weave_syntax/tests/data/syntax/statements/invalid-loop.source
function W() {
    a = 1 + 2
    :z= a b c 4
    r = 2 + z
}
